--- a/application.ini
+++ b/application.ini
@@ -63,6 +63,11 @@ resources.view[] =
 resources.modulesetup[] =
 ; THIS MUST BE DONE FOR EACH MODULE UNTIL I FIND A BETTER WAY
 
+; Book Module
+    resources.doctrine.orm.entityManagers.default.metadataDrivers.drivers.0.mappingNamespace      = "Book\Entity"
+    resources.doctrine.orm.entityManagers.default.metadataDrivers.drivers.0.mappingDirs[]         = APPLICATION_PATH "/modules/book/Book/Entity"
+    autoloaderNamespaces[] = "Book"
+
 pluginPaths.Ia_Application_Resource = "Ia/Application/Resource"
 
 ; IA Front Controller Plugins
