Able to sync Schema command..not showing up on server though....saving work for the day

--- a/book/configs/module.ini
+++ b/book/configs/module.ini
@@ -18,4 +18,4 @@ nav.book_book_index.label = List
 
 [staging : production]
 [testing : production]
-[development : production]
+[vagrant : production]
