Saving work for the day: Got some functionality

--- a/application.ini
+++ b/application.ini
@@ -63,6 +63,21 @@ resources.view[] =
 resources.modulesetup[] =
 ; THIS MUST BE DONE FOR EACH MODULE UNTIL I FIND A BETTER WAY
 
+; Training Module
+    resources.doctrine.orm.entityManagers.default.metadataDrivers.drivers.0.mappingNamespace      = "Training\Entity"
+    resources.doctrine.orm.entityManagers.default.metadataDrivers.drivers.0.mappingDirs[]         = APPLICATION_PATH "/modules/training/Training/Entity"
+    autoloaderNamespaces[] = "Training"
+
+; Intern Module
+    resources.doctrine.orm.entityManagers.default.metadataDrivers.drivers.0.mappingNamespace      = "Intern\Entity"
+    resources.doctrine.orm.entityManagers.default.metadataDrivers.drivers.0.mappingDirs[]         = APPLICATION_PATH "/modules/intern/Intern/Entity"
+    autoloaderNamespaces[] = "Intern"
+
+; Dog Module
+    resources.doctrine.orm.entityManagers.default.metadataDrivers.drivers.0.mappingNamespace      = "Dog\Entity"
+    resources.doctrine.orm.entityManagers.default.metadataDrivers.drivers.0.mappingDirs[]         = APPLICATION_PATH "/modules/dog/Dog/Entity"
+    autoloaderNamespaces[] = "Dog"
+
 ; Book Module
     resources.doctrine.orm.entityManagers.default.metadataDrivers.drivers.0.mappingNamespace      = "Book\Entity"
     resources.doctrine.orm.entityManagers.default.metadataDrivers.drivers.0.mappingDirs[]         = APPLICATION_PATH "/modules/book/Book/Entity"
